--- a/task1/package.json
+++ b/task1/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
